# llm-prompt-regression

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
config/: basic_test.yaml  comprehensive_test_suite.yaml  parameter_variation_test.yaml
examples/: run_basic_test.py  run_parameter_variation_test.py  test_openai_key.py
src/: __init__.py  cli.py
src/core/: report_generator.py  test_runner.py
src/models/: config_schemas.py  result_schemas.py
src/utils/: __init__.py  config_loader.py  logger_setup.py  metrics.py  validators.py
tests/integration/: test_end_to_end.py
tests/unit/: test_config_loader.py  test_metrics.py  test_validators.py
